/*
 * $Id: ChangeLog,v 1.1966 2003/12/30 12:32:55 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-12-30  11:12 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.slx
    * Added HB_TEXT to IF_BELONG_LEFT (fixed Text[...] support).

2003-12-30 10:30 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@brturbo.com>
  + lib/bcc640mt.lib
    + Added mt version of bcc640.lib
  ! bin/bld.bat
    ! on MT compilation with bcc32 compiler use bcc640mt.lib
  ! utils/hbmake/hbmake.prg
    ! if use MT libs options is selected, use bcc640mt.lib

2003-12-30 12:45 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
  * bin/bld.bat
    * changed -gc0 to -gc to help the debug of the pcode
  * source/compiler/genc.c
  * source/compiler/harbour.c
    * strip relative path from the debug informations
  * source/debug/debugger.prg
    * fix callstack management
    * add lookup to HB_DBG_PATH before PATH to look for prg sources

2003-12-30 11:20 UTC+0100 Francesco Saverio Giudice <info@fsgiudice.com>
  * source/rtl/gtxvt/gtxvt.c
    * Fixed a problem with gcc < ver. 3

2003-12-30 00:38 UTC+0100 Giancarlo Niccolai <antispam /at/ niccolai [dot] ws>
  * include/hbapigt.h
  * config/linux/global.cf
  + source/rtl/gtxvt/Makefile
  + source/rtl/gtxvt/gtxvt.c
    + Added GTXVT: Xwindows virtual terminal for unices

  * source/vm/thread.c
    ! Fixed threadsleep() to be interrupt compliant and hb_treadKillAll()
      that may have caused deadlocks.

  * tests/Makefile
    - Remove compilation of gtQTc samples
    + Added compilation of gtxvt; just set HB_GT_LIB=gtxvt and you'll have
      your tests compiled with "make test" in x virtual terminal.

  * tests/mousetst.prg
    ! Added support for mouse with more than 3 buttons.
  * tests/service.prg
    ! Using the console to write timer data.

  * source/rtl/hblog.prg
